--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,111 @@
-body {
-  font-family: Arial, sans-serif;
-  text-align: center;
-  padding: 20px;
+#releaseTime,
+#convertedTime {
+    display: none; 
 }
 
-input, button {
-  padding: 10px;
+body {
+  background-color: #121212;
+  color: #e0e0e0;
+  font-family: 'Helvetica', sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  margin: 0;
+  text-align: center;
+}
+
+
+h1 {
+  font-size: 2rem;
+  margin-bottom: 20px;
+  color: #ffffff;
+}
+
+
+input[type="text"] {
+  background-color: #1e1e1e;
+  color: #ffffff;
+  border: 1px solid #333;
+  padding: 15px 30px;
+  width: 300px;
+  border-radius: 20px;
+  text-align: center;
+  outline: none;
+  font-size: 1.5rem;
+}
+
+
+input[type="text"]:focus {
+  border-color: #bb86fc;
+  box-shadow: 0 0 35px #bb86fc;
+}
+
+
+button {
+  background-color: #7d35d5;
+  color: #121212;
+  border: none;
+  padding: 10px 15px;
   margin: 10px;
+  cursor: pointer;
+  font-size: 1.2rem;
+  font-weight: 550;
+  border-radius: 12px;
+  transition: background 0.3s ease-in-out;
+}
+
+button:hover {
+  background-color: #8e53d6;
+  transition: all .2s ease-in-out;
+  transform: scale(1.15);
+}
+
+button:disabled {
+  background-color: #444;
+  cursor: not-allowed;
+  opacity: 0.5;
+}
+
+#showDetails {
+  margin-top: 20px;
+  padding: 15px;
+  background-color: #1e1e1e;
+  border-radius: 10px;
+  width: 50%;
+  min-width: 320px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+
+p {
+  font-size: 1.2rem;
+  margin-top: 15px;
+  background-color: #79767613;
+  color: #ffffff;
+  padding: 15px 20px;
+  border-radius: 8px;
+  width: fit-content;
+}
+
+
+select {
+  background-color: #1e1e1e;
+  color: #ffffff;
+  border: 1px solid #333;
+  padding: 8px;
+  border-radius: 8px;
+  outline: none;
+  font-size: 1rem;
+}
+
+
+@media (max-width: 600px) {
+  input[type="text"], button, select {
+      width: 80%;
+  }
+  #showDetails {
+      width: 80%;
+  }
 }
